Adding vagrant box for mysql

--- a/4_database/webapp/webapp/templates/index.html
+++ b/4_database/webapp/webapp/templates/index.html
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li id="menu-forum">
-                        <a href="#forum">
+                        <a href="{{ url_for('forum') }}">
                             <span class="glyphicon glyphicon-comment"></span>
                             Forum
                         </a>
